@@ -69,8 +69,10 @@
 #define OP_ABS			0x2e
 
 #define OP_PAUSE		0x2f
-#define OP_LENGTH		0x30
-#define OP_POLY			0x31
+#define OP_POLY			0x30
+#define OP_LENGTH		0x31
+#define OP_MID			0x32
+#define OP_INSTR		0x33
 
 #define OP_OPEN			0x35
 #define OP_READ			0x36
