@@ -104,6 +104,8 @@ dark  [Dd][Aa][Rr][Kk]
 toint   [Ii][Nn][Tt]
 tostring [Ss][Tt][Rr][Ii][Nn][Gg]
 length  [Ll][Ee][Nn][Gg][Tt][Hh]
+mid     [Mm][Ii][Dd]
+instr   [Ii][Nn][Ss][Tt][Rr]
 ceil    [Cc][Ee][Ii][Ll]
 floor   [Ff][Ll][Oo][Oo][Rr]
 abs     [Aa][Bb][Ss]
@@ -154,6 +156,8 @@ blankline ^{whitespace}*[\n]
 {toint}         { return TOINT; }
 {tostring}      { return TOSTRING; }
 {length}        { return LENGTH; }
+{mid}           { return MID; }
+{instr}         { return INSTR; }
 {ceil}          { return CEIL; }
 {floor}         { return FLOOR; }
 {abs}           { return ABS; }
