@@ -1,5 +1,9 @@
 2006-11-24    <fhendrikx@users.sourceforge.net>
 
+	* Added "mid" and "instr" string functions
+
+2006-11-24    <fhendrikx@users.sourceforge.net>
+
 	* Added file operation "reset".
 
 2006-11-20    <drblast@users.sourceforge.net>
